# P2_Start_L2

./: pyproject.toml
.github/workflows/: publish.yml
startcode/: a_joke_api.py  b_bored_api.py  c_query_params.py  d_free_games.py  extra1_memes.py  extra2_disney.py
startcode/voorbeelden/: http_request_voorbeeld.py  json_voorbeeld.json  query_parameters.py
